--- a/src/v/kafka/server/BUILD
+++ b/src/v/kafka/server/BUILD
@@ -1,4 +1,14 @@
 cc_library(
+    name = "requests",
+    hdrs = [
+    ],
+    include_prefix = "kafka/server",
+    visibility = ["//visibility:public"],
+    deps = [
+    ],
+)
+
+cc_library(
     name = "kafka",
     srcs = [
         "connection_context.cc",
@@ -63,6 +73,20 @@ cc_library(
         "group_recovery_consumer.h",
         "group_router.h",
         "group_stm.h",
+        "member.h",
+        "partition_proxy.h",
+        "protocol_utils.h",
+        "queue_depth_monitor.h",
+        "quota_manager.h",
+        "replicated_partition.h",
+        "request_context.h",
+        "response.h",
+        "rm_group_frontend.h",
+        "server.h",
+        "snc_quota_manager.h",
+        "token_bucket_rate_tracker.h",
+        "usage_aggregator.h",
+        "usage_manager.h",
         "handlers/add_offsets_to_txn.h",
         "handlers/add_partitions_to_txn.h",
         "handlers/alter_client_quotas.h",
@@ -120,20 +144,6 @@ cc_library(
         "handlers/topics/types.h",
         "handlers/topics/validators.h",
         "handlers/txn_offset_commit.h",
-        "member.h",
-        "partition_proxy.h",
-        "protocol_utils.h",
-        "queue_depth_monitor.h",
-        "quota_manager.h",
-        "replicated_partition.h",
-        "request_context.h",
-        "response.h",
-        "rm_group_frontend.h",
-        "server.h",
-        "snc_quota_manager.h",
-        "token_bucket_rate_tracker.h",
-        "usage_aggregator.h",
-        "usage_manager.h",
     ],
     include_prefix = "kafka/server",
     visibility = ["//visibility:public"],
@@ -146,6 +156,7 @@ cc_library(
         "//src/v/resource_mgmt",
         "//src/v/security",
         "//src/v/utils",
+        ":requests",
         "@seastar//:libseastar",
     ],
 )
