--- a/src/v/pandaproxy/BUILD
+++ b/src/v/pandaproxy/BUILD
@@ -9,6 +9,17 @@ cc_library(
 )
 
 cc_library(
+    name = "logger",
+    hdrs = [
+        "logger.h",
+    ],
+    include_prefix = "pandaproxy",
+    visibility = ["//visibility:public"],
+    deps = [
+    ],
+)
+
+cc_library(
     name = "schema_registry_interface",
     hdrs = [
         "schema_registry/api.h",
@@ -17,13 +28,29 @@ cc_library(
         "schema_registry/types.h",
         "schema_registry/validation.h",
         "schema_registry/seq_writer.h",
+        "schema_registry/error.h",
+        "schema_registry/exceptions.h",
+        "schema_registry/sharded_store.h",
+        "schema_registry/service.h",
     ],
     include_prefix = "pandaproxy",
     visibility = ["//visibility:public"],
     deps = [
         "@avro//:libavro",
         "//src/v/kafka/client",
+        ":logger",
+        ":server",
+        ":pandaproxy",
     ],
+)
+
+cc_library(
+    name = "server",
+    hdrs = [
+        "server.h",
+    ],
+    include_prefix = "pandaproxy",
+    visibility = ["//visibility:public"],
 )
 
 cc_library(
@@ -32,6 +59,10 @@ cc_library(
         "fwd.h",
         "rest/configuration.h",
         "rest/fwd.h",
+        "json/types.h",
+        "kafka_client_cache.h",
+        "types.h",
+        "util.h",
     ],
     include_prefix = "pandaproxy",
     visibility = ["//visibility:public"],
