--- a/src/v/redpanda/BUILD
+++ b/src/v/redpanda/BUILD
@@ -18,6 +18,7 @@ cc_library(
         "//src/v/pandaproxy",
         "//src/v/pandaproxy:schema_registry_interface",
         "//src/v/resource_mgmt",
+        "//src/v/transform",
     ],
 )
 
