--- a/src/v/wasm/BUILD
+++ b/src/v/wasm/BUILD
@@ -1,44 +1,44 @@
 cc_library(
     name = "parser",
-    srcs = ["parser/parser.cc",
+    srcs = [
         "parser/leb128.h",
+        "parser/parser.cc",
     ],
-    hdrs = ["parser/include/wasm/parser/parser.h",],
+    hdrs = ["parser/include/wasm/parser/parser.h"],
     includes = [
         "parser/include",
     ],
+    visibility = ["//visibility:public"],
     deps = [
         "//src/v/base",
         "//src/v/bytes",
         "//src/v/utils",
     ],
-    visibility = ["//visibility:public"],
 )
-
 
 cc_library(
     name = "wasm",
     srcs = [
-        "api.cc",
-        "ffi.cc",
-        "logger.cc",
-        "transform_probe.cc",
-        "schema_registry.cc",
-        "schema_registry_module.cc",
-        "transform_module.cc",
-        "wasi.cc",
-        "wasmtime.cc",
-        "cache.cc",
         "allocator.cc",
-        "engine_probe.cc",
         "allocator.h",
+        "api.cc",
+        "cache.cc",
+        "engine_probe.cc",
         "engine_probe.h",
+        "ffi.cc",
         "ffi.h",
+        "logger.cc",
         "logger.h",
+        "schema_registry.cc",
         "schema_registry.h",
+        "schema_registry_module.cc",
         "schema_registry_module.h",
+        "transform_module.cc",
         "transform_module.h",
+        "transform_probe.cc",
+        "wasi.cc",
         "wasi.h",
+        "wasmtime.cc",
         "wasmtime.h",
     ],
     hdrs = [
@@ -51,18 +51,18 @@ cc_library(
     includes = [
         "include",
     ],
+    visibility = ["//visibility:public"],
     deps = [
+        ":parser",
         "//src/v/base",
-        "//src/v/model",
-        "//src/v/metrics",
         "//src/v/config",
-        "//src/v/pandaproxy:schema_registry_interface",
         "//src/v/kafka/client",
         "//src/v/kafka/protocol",
+        "//src/v/metrics",
+        "//src/v/model",
+        "//src/v/pandaproxy:schema_registry_interface",
         "//src/v/security",
         "@seastar//:libseastar",
-        ":parser",
         "@wasmtime//:libwasmtime",
     ],
-    visibility = ["//visibility:public"],
 )
