--- a/src/v/redpanda/BUILD
+++ b/src/v/redpanda/BUILD
@@ -1,11 +1,35 @@
+load("//src/v/redpanda:json2code.bzl", "json2code")
+
+json2code(
+    "cluster_config",
+    src = "admin/api-doc/cluster_config.json",
+    out = "admin/api-doc/cluster_config.json.hh")
+
 cc_library(
     name = "application",
     srcs = [
         "application.cc",
+        "cluster_config_schema_util.cc",
+        "admin/server.cc",
+        #"admin/debug.cc",
+        #"admin/transform.cc",
+        #"admin/security.cc",
+        #"admin/recovery.cc",
+        #"admin/transaction.cc",
+        #"admin/partition.cc",
+        #"admin/usage.cc",
+        #"admin/kafka.cc",
+        #"admin/util.cc",
+        "cli_parser.cc",
+        "monitor_unsafe_log_flag.cc",
     ],
     hdrs = [
         "application.h",
         "monitor_unsafe_log_flag.h",
+        "cluster_config_schema_util.h",
+        "cli_parser.h",
+        "admin/api-doc/cluster_config.json.hh",
+        "admin/server.h",
     ],
     include_prefix = "redpanda",
     visibility = ["//visibility:public"],
@@ -29,5 +53,6 @@ cc_binary(
     ],
     deps = [
         ":application",
+        "//src/v/syschecks",
     ],
 )
