--- a/src/v/kafka/BUILD
+++ b/src/v/kafka/BUILD
@@ -9,5 +9,6 @@ cc_library(
     include_prefix = "kafka",
     visibility = ["//visibility:public"],
     deps = [
+        "//src/v/kafka/protocol:types",
     ],
 )
