--- a/src/v/utils/BUILD
+++ b/src/v/utils/BUILD
@@ -1,6 +1,74 @@
 cc_library(
+    name = "retry_chain_node",
+    srcs = [
+        "retry_chain_node.cc",
+    ],
+    hdrs = [
+        "retry_chain_node.h",
+    ],
+    include_prefix = "utils",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/base",
+        "//src/v/ssx",
+        "//src/v/random",
+    ],
+)
+
+cc_library(
+    name = "unresolved_address",
+    hdrs = [
+        "unresolved_address.h",
+    ],
+    include_prefix = "utils",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/serde",
+    ],
+)
+
+cc_library(
+    name = "tracking_allocator",
+    srcs = [
+        "tracking_allocator.cc",
+    ],
+    hdrs = [
+        "tracking_allocator.h",
+    ],
+    include_prefix = "utils",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/json",
+    ],
+)
+
+cc_library(
+    name = "xid",
+    srcs = [
+        "xid.cc",
+    ],
+    hdrs = [
+        "xid.h",
+    ],
+    include_prefix = "utils",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/serde",
+    ],
+)
+
+cc_library(
     name = "utils",
     srcs = [
+        "base64.cc",
+        "bottomless_token_bucket.cc",
+        "directory_walker.cc",
+        "file_io.cc",
+        "hdr_hist.cc",
+        "human.cc",
+        "log_hist.cc",
+        "uuid.cc",
+        "vint.cc",
     ],
     hdrs = [
         "absl_sstring_hash.h",
@@ -32,7 +100,6 @@ cc_library(
         "queue_depth_control.h",
         "remote.h",
         "retry.h",
-        "retry_chain_node.h",
         "rwlock.h",
         "stable_iterator_adaptor.h",
         "static_deleter_fn.h",
@@ -40,20 +107,21 @@ cc_library(
         "stream_utils.h",
         "to_string.h",
         "token_bucket.h",
-        "tracking_allocator.h",
         "tristate.h",
         "truncating_logger.h",
-        "unresolved_address.h",
         "uuid.h",
         "vint.h",
         "waiter_queue.h",
-        "xid.h",
+        "vint_iostream.h",
     ],
     copts = [
     ],
     include_prefix = "utils",
     visibility = ["//visibility:public"],
     deps = [
+        "//src/v/base",
+        "//src/v/bytes",
+        "@base64//:libbase64",
         "@hdrhistogram//:libhdrhistogram",
     ],
 )
