--- a/src/v/crypto/BUILD
+++ b/src/v/crypto/BUILD
@@ -27,5 +27,6 @@ cc_library(
         "//src/v/base",
         "//src/v/bytes",
         "//src/v/ssx",
+        "@openssl//:libopenssl",
     ],
 )
