--- a/src/v/kafka/client/BUILD
+++ b/src/v/kafka/client/BUILD
@@ -1,6 +1,20 @@
 cc_library(
     name = "client",
     srcs = [
+        "assignment_plans.cc",
+        "broker.cc",
+        "brokers.cc",
+        "client.cc",
+        "client_fetch_batch_reader.cc",
+        "configuration.cc",
+        "config_utils.cc",
+        "consumer.cc",
+        "fetcher.cc",
+        "fetch_session.cc",
+        "partitioners.cc",
+        "producer.cc",
+        "topic_cache.cc",
+        "sasl_client.cc",
     ],
     hdrs = [
         "assignment_plans.h",
