--- a/src/v/model/BUILD
+++ b/src/v/model/BUILD
@@ -1,6 +1,14 @@
 cc_library(
     name = "model",
     srcs = [
+        "model.cc",
+        "record_batch_reader.cc",
+        "record_utils.cc",
+        "async_adl_serde.cc",
+        "adl_serde.cc",
+        "validation.cc",
+        "transform.cc",
+        "record.cc",
     ],
     hdrs = [
         "adl_serde.h",
