--- a/src/v/iceberg/CMakeLists.txt
+++ b/src/v/iceberg/CMakeLists.txt
@@ -31,8 +31,10 @@ v_cc_library(
     datatypes.cc
     datatypes_json.cc
     json_utils.cc
+    manifest_avro.cc
     schema_json.cc
   DEPS
+    v::bytes
     v::container
     v::json
     v::strings
