generate iceberg testdata
Signed-off-by: Noah Watkins <noahwatkins@gmail.com>

--- a/src/v/iceberg/tests/CMakeLists.txt
+++ b/src/v/iceberg/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 find_package(Avro)
 
-set(TESTDATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/testdata")
+set(test_data ${CMAKE_CURRENT_BINARY_DIR}/iceberg_manifest.avro)
 
 rp_test(
   UNIT_TEST
@@ -20,6 +20,11 @@ rp_test(
     v::gtest_main
     v::iceberg
   INPUT_FILES
-    "${TESTDATA_DIR}/iceberg_manifest.avro"
+    ${test_data}
   ARGS "-- -c1"
 )
+
+set(generator "${PROJECT_SOURCE_DIR}/tools/gen_test_iceberg_manifest.py")
+add_test(NAME generate_test_data COMMAND ${generator} -o ${test_data} -n 100)
+set_tests_properties(generate_test_data PROPERTIES FIXTURES_SETUP test_fixture)
+set_tests_properties(iceberg_rpunit PROPERTIES FIXTURES_REQUIRED test_fixture)
